--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 
 <html>
     <head>
@@ -14,12 +14,17 @@
             <li><a href="https://ru.wikipedia.org/wiki/Аниме#История">Ссылка на фрагмент страницы некоторого сайта</a></li>
             <li><a href="#Форма">Ссылка на фрагмент текущей страницы</a></li>
             <li><a href="https://www.mvideo.ru?page=1&perpage=30">Ссылка с двумя параметрами в URL</a></li>
-            <li><a href="">Список ссылок основной навигации сайта с подписями title</a></li>
+            <li><a href="http://example.com">список ссылок основной навигации сайта с подписями title</a></li>
+            <ul>
+                <ul><a href="http://example.com/menu/head/" title="Заголовок страницы сайта">1)Заголовок страницы сайта</a></ul>
+                <ul><a href="http://example.com/menu/catalog/" title="Каталог">2)Каталог</a></ul>
+                <ul><a href="http://example.com/menu/services/" title="Услуги">3)Услуги</a></ul>
+            </ul>
             <li><a >Ссылка без href</a></li>
             <li><a href="##">Ссылка с пустым href</a></li>
             <li><a href="http://example.com" rel="noindex">Ссылка, по которой запрещен переход поисковикам</a></li>
             <li><a href="http://example.com" rel="nofollow">Запрещенная для индексации поисковиками</a></li>
-            <li><a href="##">Контекстная в тексте абзаца</a></li>
+            <li>Контекстная <a href="https://example.com">в теле абзаца</a></li>
             <li><a href="index.html"><img src="image.jpg"></a></li>
             <li><a href="index.html"><img src="nakl_prozr_dveri_3-700x800.png" usemap="#Navigation"></a></li>
             <map name="Navigation">
@@ -30,8 +35,8 @@
             <li><a href="about/index.html">Относительная на страницу в каталоге about</a></li>
             <li><a href="../index.html">Относительная на страницу в каталоге уровнем выше текущего</a></li>
             <li><a href="../../index.html">Относительная на страницу в каталоге двумя уровнями выше</a></li>
-            <li><a href="##">Сокращенная на главную</a></li>
-            <li><a href="##">Сокращенная ссылку на внутреннюю</a></li>
+            <li><a href="/">Сокращенная на главную</a></li>
+            <li><a href="/index.html">Сокращенная ссылку на внутреннюю</a></li>
         </ol>
         <h1> <a name="Форма"></a> Форма</h1>
         <form action="/" method="post">
