--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 
 <html>
     <head>
@@ -26,11 +26,12 @@
             <li><a href="http://example.com" rel="nofollow">Запрещенная для индексации поисковиками</a></li>
             <li>Контекстная <a href="https://example.com">в теле абзаца</a></li>
             <li><a href="index.html"><img src="image.jpg"></a></li>
-            <li><a href="index.html"><img src="nakl_prozr_dveri_3-700x800.png" usemap="#Navigation"></a></li>
+            <li><img src="nakl_prozr_dveri_3-700x800.png" usemap="#Navigation"></a>
             <map name="Navigation">
-                <area shape="rect" coords="2,260,284,538" href="#1-rect" alt="ссылка 1">
-                <area shape="circle" coords="557,401,143" href="#2-circle" alt="ссылка 2">
+                <area shape="rect" coords="2,260,284,538" href="index.html" alt="ссылка 1">
+                <area shape="circle" coords="557,401,143" href="index.html" alt="ссылка 2">
             </map>
+            </li>
             <li><a href="index.html">Относительная на страницу в текущем каталоге</a></li>
             <li><a href="about/index.html">Относительная на страницу в каталоге about</a></li>
             <li><a href="../index.html">Относительная на страницу в каталоге уровнем выше текущего</a></li>
