--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
             <li><a href="http://example.com" rel="noindex">Ссылка, по которой запрещен переход поисковикам</a></li>
             <li><a href="http://example.com" rel="nofollow">Запрещенная для индексации поисковиками</a></li>
             <li>Контекстная <a href="https://example.com">в теле абзаца</a></li>
-            <li><a href="index.html"><img src="image.jpg"></a></li>
-            <li><img src="nakl_prozr_dveri_3-700x800.png" usemap="#Navigation"></a>
+            <li><a href="index.html"><img src="image.jpg" width="400" height="400"></a></li>
+            <li><img src="nakl_prozr_dveri_3-700x800.png" width="400" height="400" usemap="#Navigation"></a>
             <map name="Navigation">
-                <area shape="rect" coords="2,260,284,538" href="index.html" alt="ссылка 1">
-                <area shape="circle" coords="557,401,143" href="index.html" alt="ссылка 2">
+                <area shape="rect" coords="2,260,284,538" href="index.html" alt="rectangle">
+                <area shape="circle" coords="557,401,143" href="index.html" alt="circle">
             </map>
             </li>
             <li><a href="index.html">Относительная на страницу в текущем каталоге</a></li>
