--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             <li><a href="index.html"><img src="image.jpg" width="400" height="400"></a></li>
             <li><img src="nakl_prozr_dveri_3-700x800.png" width="400" height="400" usemap="#Navigation"></a>
             <map name="Navigation">
-                <area shape="rect" coords="2,260,284,538" href="index.html" alt="rectangle">
-                <area shape="circle" coords="557,401,143" href="index.html" alt="circle">
+                <area shape="rect" coords="2,260,284,538" href="http://example.com" alt="rectangle">
+                <area shape="circle" coords="557,401,143" href="http://example.com" alt="circle">
             </map>
             </li>
             <li><a href="index.html">Относительная на страницу в текущем каталоге</a></li>
@@ -55,7 +55,7 @@
             <label>
                 Дата рождения: <br/>
                 <input name="field-date"
-                value="2022-09-11"
+                value="2022-09-13"
                 type="date"/>
             </label> <br/>
             Пол: <br/>
