--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <li><a href="../index.html">Относительная на страницу в каталоге уровнем выше текущего</a></li>
             <li><a href="../../index.html">Относительная на страницу в каталоге двумя уровнями выше</a></li>
             <li><a href="/">Сокращенная на главную</a></li>
-            <li><a href="/index.html">Сокращенная ссылку на внутреннюю</a></li>
+            <li><a href="/index.html">Сокращенная ссылка на внутреннюю</a></li>
         </ol>
         <h1> <a name="Форма"></a> Форма</h1>
         <form action="/" method="post">
